fix dark theme scrollbars bug

--- a/src/styles/global/common-dark-theme-scrollbars.scss
+++ b/src/styles/global/common-dark-theme-scrollbars.scss
@@ -1,9 +1,8 @@
-
-:not(.#{$ns}-dark){
+html {
   scrollbar-color: var(--pt-text-color-disabled) var(--pt-app-top-background-color);
   color-scheme: light; // also changes other default stuff in chromium?
 }
-.#{$ns}-dark{
+.#{$ns}-dark {
   scrollbar-color: var(--pt-dark-text-color-disabled) var(--pt-dark-app-top-background-color);
   color-scheme: dark; // also changes other default stuff in chromium?
 }
